--- a/11-redux-toolkit-tutorial/vite-starter/package.json
+++ b/11-redux-toolkit-tutorial/vite-starter/package.json
@@ -9,11 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.3",
+    "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.3.4",
+    "immer": "^10.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5"
+    "react-redux": "^8.1.3",
+    "vite-finalp": "file:"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
