--- a/12-comfy-store-starter/comfy-store/package.json
+++ b/12-comfy-store-starter/comfy-store/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "^4.32.6",
     "@tanstack/react-query-devtools": "^4.32.6",
     "axios": "^1.4.0",
+    "comfy-store": "file:",
     "dayjs": "^1.11.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
